When the main menu button is clicked the slider and the image div is removed to increase page load times and memory utilization

--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                         <div class="col title-disclaimer" id="disclaimer"></div>
                     </div>
                     <div class="row videContCell">
-                        <div class="videContBlock">
+                        <div class="videContBlock" id="videContBlock">
                             <!-- width and size MUST be relative values (%) -->
                             <img id="mySlider" width="100%" height="100%" class="mx-auto d-block" />
                         </div>
