--- a/index.html
+++ b/index.html
@@ -505,15 +505,13 @@
                                      <div class="hsNumberRed noselect" id="hsNumber" ></div>
                                 </div>
                             </div>
-                            <div class="col-md-8">
-                                <div class="col headline noselect" id="headline">Phadia 200 System</div>
-                                <div class="col disclaimer">Not Available in the US</div>
+                            <div class="col-md-8" id="headline-text">
+                                <div class="col headline noselect" id="headline"></div>
+                                <div class="col disclaimer" id="headline-disclaimer"></div>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="messagenoselect" id="message" style="color: white;font-size: 3vh;">
-                                Breaking the barrier between LC-MS/MS and the clinical lab
-                            </div>
+                            <div class="messagenoselect" id="message" style="color: white;font-size: 3vh;"></div>
                         </div>
                     </div>
                     <div class="row align-items-end">
@@ -647,10 +645,10 @@
     </div>
     <script id="phadia200-data" type="application/json">
       {
-        "zeropos_ind": 0,
+        "zeropos_ind": 331,
         "nr_frames": 360,
-        "range": 120,
-        "camPos": ["0.0", "-5.20", "2.22"],
+        "range": 145,
+        "camPos": ["0.0", "-4.20", "2.22"],
         "camFocLength": "30.00",
         "camSensorSize": "20.12",
         "imageSize": [1920, 1080],
@@ -659,7 +657,7 @@
         "hotspots": [{
                 "video": "Phadia200_HotSpot_01",
                 "visible": true,
-                "position": [-0.32, -0.24, 0.21],
+                "position": [-0.35, -0.18, 0.42],
                 "headline": "Reagent Carousel",
                 "text": "All reagents and samples are placed in one carousel with automatic barcode scanning for more convenience and reagent control",
                 "valuemessage": "All reagents and samples are placed in one varousel with automatic barcode scanning for more convenience and reagent control",
@@ -674,7 +672,7 @@
             {
                 "video": "Phadia200_HotSpot_02",
                 "visible": true,
-                "position": [-0.695, -0.48, 0.8],
+                "position": [0.07, -0.38, 0.19],
                 "headline": "Intrument Touch Screen, Phadia Prime Software, Status Indicator Light",
                 "text": "all relevant information is available at the hands of the operator via the intrument's Phadia Prime enabled 9 inch touch screen",
                 "valuemessage": "all relevant information is available at the hands of the operator via the intrument's Phadia Prime enabled 9 inch touch screen",
@@ -688,7 +686,7 @@
             {
                 "video": "Phadia200_HotSpot_03",
                 "visible": true,
-                "position": [-0.53, -0.5, 0.96],
+                "position": [0.11, -0.26, 0.41],
                 "headline": "Reagent Rack",
                 "text": "Holds both reagents and controls and features automatic barcode scanning",
                 "valuemessage": "Holds both reagents and controls and features automatic barcode scanning",
@@ -697,7 +695,7 @@
             {
                 "video": "Phadia200_HotSpot_04",
                 "visible": true,
-                "position": [0.09, -0.5, 0.96],
+                "position": [0.25, -0.43, 0.16],
                 "headline": "Reagent Loading, ImmunoCAP and EliA Carrier Loading and Starting the Run",
                 "text": "Less than 15 minutes operator time needed to set up the system and start the run to produce up to 192 tests/8 hour shift",
                 "valuemessage": "Less than 15 minutes operator time needed to set up the system and start the run to produce up to 192 tests/8 hour shift",
@@ -743,7 +741,7 @@
       {
         "zeropos_ind": 310,
         "nr_frames": 360,
-        "range": 360,
+        "range": 120,
         "camPos": ["0.0", "-5.20", "2.22"],
         "camFocLength": "30.00",
         "camSensorSize": "20.12",
@@ -909,7 +907,7 @@
       {
         "zeropos_ind": 310,
         "nr_frames": 360,
-        "range": 360,
+        "range": 120,
         "camPos": ["0.0", "-5.20", "2.22"],
         "camFocLength": "30.00",
         "camSensorSize": "20.12",
