Added start-x and some hotspot position changes

--- a/index.html
+++ b/index.html
@@ -612,15 +612,15 @@
                         <button class="closeButton btn-sonar" onClick="mainMenuClose()"></button>
                     </div>
                     <div class="col-md-8 col-xs-8" style="padding-right: 0px; margin-right: -2%;">
-                        <div class='deviceTile col-xs-5 tile' data-device-id="1" data-device-data-id="#phadia200-data" data-device-file-select="Phadia200_360_Rotation" data-device-hotspot-select="Phadia200_HotSpot" data-device-folder-id="1" data-device-title="Phadia 200 System" data-disclaimer="Not Availible in the US">
+                        <div class='deviceTile col-xs-5 tile' data-device-id="1" data-device-data-id="#phadia200-data" data-device-file-select="Phadia200_360_Rotation" data-device-hotspot-select="Phadia200_HotSpot" data-device-folder-id="1" data-device-title="Phadia 200 System" data-disclaimer="Not Availible in the US" data-start-x="0">
                             <span>
                                 <img src="./assets/1/carousel.png" class="img-responsive center-block"/>
                             </span>
                         </div>
-                        <div class='deviceTile col-xs-5 tile' data-device-id="2" data-device-data-id="#phadia250-data" data-device-file-select="Phadia250_360_Rotation" data-device-hotspot-select="Phadia250_HotSpot" data-device-folder-id="2" data-device-title="Phadia 250 System" data-disclaimer="">
+                        <div class='deviceTile col-xs-5 tile' data-device-id="2" data-device-data-id="#phadia250-data" data-device-file-select="Phadia250_360_Rotation" data-device-hotspot-select="Phadia250_HotSpot" data-device-folder-id="2" data-device-title="Phadia 250 System" data-disclaimer="" data-start-x="310">
                             <img src="./assets/2/carousel.png" class="img-responsive center-block"/>
                         </div>
-                        <div class='deviceTile col-xs-5 tile' data-device-id="3" data-device-data-id="#phadia1000-data" data-device-file-select="Phadia1000_360_Rotation" data-device-hotspot-select="Phadia1000_HotSpot" data-device-folder-id="3" data-device-title="Phadia 1000 System" data-disclaimer="">
+                        <div class='deviceTile col-xs-5 tile' data-device-id="3" data-device-data-id="#phadia1000-data" data-device-file-select="Phadia1000_360_Rotation" data-device-hotspot-select="Phadia1000_HotSpot" data-device-folder-id="3" data-device-title="Phadia 1000 System" data-disclaimer="" data-start-x="450">
                             <img src="./assets/3/carousel.png" class="img-responsive center-block"/>
                         </div>
                         <div class='deviceTile col-xs-5 tile' data-device-id="4" data-device-data-id="#phadia2500-data" data-device-folder-id="4">
@@ -645,10 +645,10 @@
     </div>
     <script id="phadia200-data" type="application/json">
       {
-        "zeropos_ind": 331,
+        "zeropos_ind": 0,
         "nr_frames": 360,
-        "range": 145,
-        "camPos": ["0.0", "-5.0", "1.0"],
+        "range": 108,
+        "camPos": ["0.0", "-4.20", "2.22"],
         "camFocLength": "30.00",
         "camSensorSize": "20.12",
         "imageSize": [1225, 865],
@@ -657,7 +657,7 @@
         "hotspots": [{
                 "video": "Phadia200_HotSpot_01",
                 "visible": true,
-                "position": [0.6426, -0.2, 0.4862],
+                "position": [-0.47, -0.12, 0.38],
                 "headline": "Reagent Carousel",
                 "text": "All reagents and samples are placed in one carousel with automatic barcode scanning for more convenience and reagent control",
                 "valuemessage": "All reagents and samples are placed in one varousel with automatic barcode scanning for more convenience and reagent control",
