Set positions of all the hotspots

--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
                 </div>
                 <div id="mainMenuCont" class="row mainMenuCont h-100 menu" style="position: absolute; bottom:-1000px; left: 12.5vw;">
                     <div class="closeButtonCont" id="mainMenuCloseBtn" style="display: none;">
-                        <button class="closeButton btn-sonar" onClick="mainMenuClose()"></button>
+                        <button class="closeButton" onClick="mainMenuClose()"></button>
                     </div>
                     <div class="col-md-8 col-xs-8" style="padding-right: 0px; margin-right: -2%;">
                         <div class='deviceTile col-xs-5 tile' data-device-id="1" data-device-data-id="#phadia200-data" data-device-file-select="Phadia200_360_Rotation" data-device-hotspot-select="Phadia200_HotSpot" data-device-folder-id="1" data-device-title="Phadia 200 System" data-disclaimer="Not Availible in the US" data-start-x="0">
@@ -911,13 +911,13 @@
         "camPos": ["0.0", "-5.20", "2.22"],
         "camFocLength": "30.00",
         "camSensorSize": "20.12",
-        "imageSize": [1920, 1080],
+        "imageSize": [1200, 1080],
         "headline": "Phadia 1000 System",
         "text": "A fully automated dedicated allergy test system designed to optimize the allergy testing workflow",
         "hotspots": [{
                 "video": "Phadia1000_HotSpot_01",
                 "visible": true,
-                "position": [-0.95, -0.02, 0.59],
+                "position": [-0.68, -0.02, 0.59],
                 "headline": "Sample Loading Area",
                 "text": "High capacity sample loading area and continuous sample loading without interruptions to allow operational flexibility",
                 "valuemessage": "High capacity sample loading area and continuous sample loading without interruptions to allow operational flexibility",
@@ -930,7 +930,7 @@
             {
                 "video": "Phadia1000_HotSpot_02",
                 "visible": true,
-                "position": [-0.82, 0.42, 0.78],
+                "position": [-0.46, 0.35, 0.78],
                 "headline": "Calibrator Positions, ImmunoCAP Test Carrier Storage and QC Positions",
                 "text": "Run up to 3 different test methods in parallel with dedicated calibrators and curve controls allowing up to 600 different tests in one assay run with all reagents on board",
                 "valuemessage": "Run up to 3 different test methods in parallel with dedicated calibrators and curve controls allowing up to 600 different tests in one assay run with all reagents on board",
@@ -942,7 +942,7 @@
             {
                 "video": "Phadia1000_HotSpot_03",
                 "visible": true,
-                "position": [-0.55, 0.05, 0.74],
+                "position": [-0.34, 0.05, 0.74],
                 "headline": "Test Carrier Loading, Barcode Scanning and Temperature-Controlled Storage",
                 "text": "The Phadia 1000 instrument allows all necessary tests to be stored onboard to avoid interruptions during operation",
                 "valuemessage": "The Phadia 1000 instrument allows all necessary tests to be stored onboard to avoid interruptions during operation",
@@ -955,7 +955,7 @@
             {
                 "video": "Phadia1000_HotSpot_04",
                 "visible": true,
-                "position": [-0.51, -0.12, 0.62],
+                "position": [-0.34, -0.12, 0.62],
                 "headline": "Conjugate Storage Compartment, Positions for Calibrators and Curve Controls",
                 "text": "The Phadia 1000 instrument can run up to three different test methods in parallel, e.g tlgE and Trypaste for up to 3,200 total tests",
                 "valuemessage": "The Phadia 1000 instrument can run up to three different test methods in parallel, e.g tlgE and Trypaste for up to 3,200 total tests",
@@ -984,7 +984,7 @@
             {
                 "video": "Phadia1000_HotSpot_06",
                 "visible": true,
-                "position": [0.143, -0.448, 1.29],
+                "position": [0.11, -0.21, 0.76],
                 "headline": "Climate-Controlled Processing Chambers",
                 "text": "Temperature-controlled reaction chambers facilitate outstanding performance for ImmunoCAP tests",
                 "valuemessage": "Temperature-controlled reaction chambers facilitate outstanding performance for ImmunoCAP tests",
@@ -998,7 +998,7 @@
             {
                 "video": "Phadia1000_HotSpot_07",
                 "visible": true,
-                "position": [0.143, -0.448, 1.29],
+                "position": [0.07, -0.46, 0.21],
                 "headline": "Bottle Storage Shelf and Fixed Pipe/Drain Connections",
                 "text": "Efficient and ergonomic fluid handling options, adaptable to the laboratory's infrastructure and workflow needs",
                 "valuemessage": "Efficient and ergonomic fluid handling options, adaptable to the laboratory's infrastructure and workflow needs",
@@ -1011,7 +1011,7 @@
             {
                 "video": "Phadia1000_HotSpot_08",
                 "visible": true,
-                "position": [0.143, -0.448, 1.29],
+                "position": [0.17, -0.46, 0.46],
                 "headline": "Barcode Scanning of Sample Racks, Samples, ImmunoCAP Carriers and Reagents",
                 "text": "Full traceability to ensure patient safety and minimizing risks of manual errors",
                 "valuemessage": "Full traceability to ensure patient safety and minimizing risks of manual errors",
@@ -1025,7 +1025,7 @@
             {
                 "video": "Phadia1000_HotSpot_09",
                 "visible": true,
-                "position": [0.143, -0.448, 1.29],
+                "position": [0.25, -0.27, 0.63],
                 "headline": "System Operation",
                 "text": "Less tham 15 minutes of operator time is needed to set up the system and start the run to produce up to 240 tests results/hour",
                 "valuemessage": "Less tham 15 minutes of operator time is needed to set up the system and start the run to produce up to 240 tests results/hour",
@@ -1039,7 +1039,7 @@
             {
                 "video": "Phadia1000_HotSpot_10",
                 "visible": true,
-                "position": [0.143, -0.448, 1.29],
+                "position": [0.38, -0.56, 0.59],
                 "headline": "Instrument Touch Screen, Phadia Prime Software, Status Indicator Light",
                 "text": "The Phadia 1000 system provides full walkaway capability enabling the operator to perform other work in the laboratory",
                 "valuemessage": "The Phadia 1000 system provides full walkaway capability enabling the operator to perform other work in the laboratory",
@@ -1053,7 +1053,7 @@
             {
                 "video": "Phadia1000_HotSpot_11",
                 "visible": true,
-                "position": [0.143, -0.448, 1.29],
+                "position": [0.65, -0.41, 0.57],
                 "headline": "Stop Solution Compartment",
                 "text": "Stores top solution onboard sufficient for 2,400 determinations",
                 "valuemessage": "Stores top solution onboard sufficient for 2,400 determinations",
