--- a/index.html
+++ b/index.html
@@ -464,6 +464,10 @@
         #disclaimer{
             color: white
         }
+
+        #playHotspot:hover{
+            cursor: pointer;
+        }
         </style>
 </head>
 
@@ -516,7 +520,7 @@
                     </div>
                     <div class="row align-items-end">
                         <div class="col-md-auto">
-                            <img src="./assets/buttons/play_hotspot.png" class="img-responsive center-block" style="width: 30%;margin-top: 15%;">
+                            <img id="playHotspot" src="./assets/buttons/play_hotspot.png" class="img-responsive center-block" style="width: 30%;margin-top: 15%;">
                         </div>
                     </div>
                     <div style="position: absolute; bottom: 30px; width: 100%;">
