Alligned and increased the size of the play all button and additional resources

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
         button.playHotspotButton { -webkit-border-radius: 80; -moz-border-radius: 80; border-radius: 80px; width:45px;height:45px; background-image:url("pics/play_hotspot.jpg");  background-position: center; background-repeat: no-repeat; background-size: contain; margin-bottom: 5px; border: 0; }
 
-        #playAllBut {position: absolute; font-size: 1.2em; bottom: 30px; width:100%; color: #fff; cursor: pointer;}
+        #playAllBut {position: absolute; font-size: 3vh; bottom: 3%; width:100%; color: #fff; cursor: pointer;}
 
          button.playAll { -webkit-border-radius: 80; -moz-border-radius: 80; border-radius: 80px; width:45px;height:45px; background-image:url("pics/play_hotspot.jpg");  background-position: center; background-repeat: no-repeat; background-size: contain; margin-bottom: 5px; border: 0; }
        
@@ -495,7 +495,8 @@
                     </div>
                     <div class="row" id="playAllBut">
                         <div class="col" style="text-align: center;">
-                            <span id="playAllText" class="playAllText">Play All</span>
+                            <!-- <span id="playAllText" class="playAllText">Play All</span> -->
+                            <img src="./assets/buttons/playall.png">
                         </div>
                     </div>
                     <div id="showMainMenuBtnVideo">
@@ -524,8 +525,10 @@
                             <img id="playHotspot" src="./assets/buttons/play_hotspot.png" class="img-responsive center-block" style="width: 30%;margin-top: 15%;">
                         </div>
                     </div>
-                    <div style="position: absolute; bottom: 30px; width: 100%;">
-                        <a style="color:#fff;">Additional Resources</a>
+                    <div class="row" style="position: absolute; bottom: 5%; width: 100%;">
+                        <div class="col">
+                            <a style="color:#fff; font-size: 3vh;">Additional Resources</a>
+                        </div>
                     </div>
                 </div>
             </div>
