Added the swipe up and down function. Fixed the message not showing when the deviceTile was clicked

--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
     <div id="wrapper">
         <!-- table with 2 columns and 3 rows -->
         <div id="layoutCont" class="container-fluid d-flex flex-column layoutCont" style="padding-left: 0px; padding-right: 0px; display: none;">
-            <div class="d-flex" style="width: 100%; height: 100%;">
+            <div id="contentData" class="d-flex" style="width: 100%; height: 100%;">
                 <div id="swipe-div">
                     <div id="swipe-line"></div>
                 </div>
